@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.122 2001/12/04 00:51:43 wcampbel Exp $
+ * $Id: config.h.dist,v 1.123 2001/12/06 20:56:08 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -699,12 +699,14 @@
 
 /* ----------------- not approved on EFnet section --------------------
  *
- * if you are an efnet admin, some of these are not officially supported, so
- * you may want to undef some -- fl_
+ * if you are not an efnet admin - we recommend you enable most of these.. 
+ * --fl_
  */
 
 /* Ignore bogus timestamps from other servers. Yes this will desync
  * the network, but it will allow chanops to resync with a valid non TS 0
+ *
+ * This should be enabled network wide, or not at all.
  */
 #undef  IGNORE_BOGUS_TS
 
