@@ -1,3 +1,7 @@
+*** 20011206_3 by leeh
+- config.h cleanups
+
+
 *** 20011206_2 by leeh
 - commited the knock stuff.. 
 
